--- a/app.json
+++ b/app.json
@@ -27,7 +27,10 @@
       "versionCode": 1
     },
     "updates": {
-      "fallbackToCacheTimeout": 0
+      "enabled": true,
+      "checkAutomatically": "ON_LOAD",
+      "fallbackToCacheTimeout": 2000,
+      "url": "http://ddd"
     },
     "assetBundlePatterns": [
       "**/*"
